# svc-cargo

./: .cspell.project-words.txt  .env.base  .env.repo  .terraform_init  .tofu_init  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  log4rs.yaml
.compose/aetheric-svc/: test-server.yaml
.github/workflows/: build-and-push-docker.yml  rust_ci.yml
.make/: docker.mk  rust.mk
client/: Cargo.toml
client-grpc/: Cargo.toml  README.md
client-grpc/examples/: grpc.rs
client-grpc/src/: client.rs  grpc.rs  prelude.rs  service.rs
client-grpc/tests/: integration_test.rs
client-rest/: Cargo.toml
client-rest/examples/: rest.rs
client-rest/src/: lib.rs
client/src/: grpc.rs  lib.rs
docs/: conops.md  icd.md  sdd.md
openapi/: types.rs
proto/: grpc.proto  svc-cargo-grpc.proto
server/: Cargo.toml  README.md  build.rs
server/src/: api_rest.rs  config.rs  grpc.rs  grpc_clients.rs  lib.rs  main.rs  rest.rs  rest_api.rs  test_util.rs
server/src/cache/: macros.rs  mod.rs  pool.rs
server/src/grpc/: client.rs  server.rs
server/src/rest/: api.rs  mod.rs  server.rs
server/src/rest/api/: cancel.rs  confirm.rs  create.rs  health.rs  mod.rs  query.rs  request.rs  scan.rs  utils.rs
server/tests/: integration_test.rs
src/: main.rs  public-api.rs
