[package]
edition = "2021"
name    = "svc-cargo-client-grpc"
version = "0.8.0-develop.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost       = "0.11"
prost-types = "0.11"
tonic       = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[lib]
name = "svc_cargo_client_grpc"
path = "src/lib.rs"

[[example]]
name = "grpc"
