[package]
description = "Arrow Cargo service GRPC client"
name        = "svc-cargo-client-grpc"
version     = "0.9.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
prost       = "0.11"
prost-types = "0.11"
tonic       = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[lib]
name = "svc_cargo_client_grpc"
path = "src/lib.rs"

[[example]]
name = "grpc"
