[package]
edition = "2021"
name    = "svc-cargo-client-rest"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono     = { version = "0.4.22", features = ["serde"] }
serde      = "1.0.145"
serde_json = "1.0.85"
utoipa     = { version = "2.2.0", features = ["axum_extras"] }

[[example]]
name = "rest"

[dev-dependencies]
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.20.1", features = ["full"] }
