[package]
description = "A REST client for the svc-cargo service"
name        = "svc-cargo-client-rest"
version     = "0.9.1-develop.3"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono     = { version = "0.4", features = ["serde"] }
serde      = "1.0"
serde_json = "1.0"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "2.2"

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "v0.2.0"

[dependencies.svc-scheduler-client-grpc]
git = "https://github.com/Arrow-air/svc-scheduler"
tag = "v0.4.0"

[[example]]
name = "rest"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.20", features = ["full"] }
uuid  = { version = "1.3", features = ["v4"] }
