[package]
description = "Cargo Service GRPC and REST servers"
name        = "svc-cargo"
version     = "0.9.1-develop.1"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
vendored-openssl = ['openssl/vendored']

[dependencies]
anyhow       = "1.0"
axum         = "0.6"
cargo-husky  = "1"
chrono       = { version = "0.4", features = ["serde"] }
clap         = { version = "4.0", features = ["derive"] }
config       = "0.13"
dotenv       = "0.15"
env_logger   = "0.10"
futures      = "0.3"
hyper        = "0.14"
log          = "0.4"
openssl      = "0.10"
prost        = "0.11"
prost-build  = "0.11"
prost-types  = "0.11"
serde        = "1.0"
serde_json   = "1.0"
tokio        = { version = "1.20", features = ["full"] }
tokio-util   = "0.7"
tonic        = "0.8"
tonic-health = "0.8"
uuid         = { version = "1.2", features = ["v4"] }

[dependencies.svc-scheduler-client-grpc]
git = "https://github.com/Arrow-air/svc-scheduler"
tag = "v0.2.5-develop.16"

[dependencies.svc-pricing-client-grpc]
git = "https://github.com/Arrow-air/svc-pricing"
tag = "v0.5.0"

[dependencies.svc-storage-client-grpc]
features = [
  "vertiport",
  "vertipad",
  "parcel_scan",
  "parcel",
  "vehicle",
  "flight_plan",
]
git = "https://github.com/Arrow-air/svc-storage"
tag = "v0.10.1-develop.15"

[dependencies.lib-common]
git = "https://github.com/Arrow-air/lib-common"
tag = "v0.1.0"

[build-dependencies]
tonic-build = "0.8"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "3.2"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"
