[package]
description = "Arrow cargo service gRPC and REST servers"
keywords    = ["vtol", "server", "grpc", "rest", "cargo"] # max 5
name        = "svc-cargo"
version     = "0.10.1-develop.1"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
default          = []
dev              = ["mock"]
test_util        = ["mock", "stub_backends"]
vendored-openssl = ["openssl/vendored"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = ["svc-storage-client-grpc/mock"]
# Will use a stubbed backend connection, only use for tests!
stub_backends = [
  "svc-storage-client-grpc/stub_client",
  "svc-pricing-client-grpc/stub_client",
  "svc-scheduler-client-grpc/stub_client",
]
# Will implement stub functions for the server, only use for tests!
stub_server = ["test_util"]
# Only added to support client-grpc feature when running tests
stub_client = ["stub_backends"]

[dependencies]
anyhow         = "1.0"
axum           = "0.6"
cargo-husky    = "1"
chrono         = { version = "0.4", features = ["serde"] }
clap           = { version = "4.4", features = ["derive"] }
config         = "0.13"
deadpool-redis = { version = "0.13", features = ["serde"] }
dotenv         = "0.15"
env_logger     = "0.10"
futures        = "0.3"
geo            = { version = "0.26", features = ["use-serde"] }
hyper          = "0.14"
log            = "0.4"
num-derive     = "0.4"
num-traits     = "0.2"
openssl        = "0.10"
prost          = "0.12"
prost-types    = "0.12"
serde          = "1.0"
serde_json     = "1.0"
tokio          = { version = "1.33", features = ["full"] }
tokio-util     = "0.7"
tonic          = "0.10"
tonic-health   = "0.10"
tower          = { version = "0.4", features = ["limit"] }
tower-http     = { version = "0.4", features = ["cors", "trace"] }
uuid           = { version = "1.5", features = ["v4"] }

[dependencies.svc-scheduler-client-grpc]
git = "https://github.com/Arrow-air/svc-scheduler.git"
tag = "latest-develop"

[dependencies.svc-pricing-client-grpc]
git = "https://github.com/Arrow-air/svc-pricing"
tag = "latest-develop"

[dependencies.svc-storage-client-grpc]
features = [
  "vertiport",
  "vertipad",
  "parcel_scan",
  "parcel",
  "vehicle",
  "flight_plan",
  "flight_plan_parcel",
  "group",
]
git = "https://github.com/Arrow-air/svc-storage"
tag = "latest-develop"

[dependencies.lib-common]
git = "https://github.com/Arrow-air/lib-common"
tag = "latest-develop"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.0"

[dev-dependencies]
logtest = "2.0"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

# Make sure we enable the required modules when running tests
[dev-dependencies.svc-cargo]
features = ["dev"]
path     = "."

[build-dependencies]
tonic-build = "0.10"
